workshop03/service.yaml
apiVersion: v1
kind: Service
#apiVersion: v1
metadata:
  name:  weatherappservice
spec:
  selector:
    app:  weatherapp
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
    targetPort:  8080
