workshop03/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: openweathermap-svc-entry
  namespace: default
spec:
  hosts:
  - "api.openweathermap.org"
  ports:
  - number: 80
    protocol: http
    name:  http
  - number: 443
    protocol: https
    name:  https
  location: MESH_EXTERNAL
  resolution: DNS
